<?xml version="1.0"?>
<package format="2">
  <name>icir_phri_viz</name>
  <version>0.0.1</version>
  <description>Visualization configuration for ICIR PHRI Panda Husky</description>

  <author email="js.park@cnu.ac.kr">Jinseong Park</author>
  <maintainer email="js.park@cnu.ac.kr">Jinseong Park</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>

  <export>
  </export>
</package>
